--- a/EBot/EBot.csproj
+++ b/EBot/EBot.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="3.1.2" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0001" />
-    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0001" />
+    <PackageReference Include="DSharpPlus" Version="3.2.2" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.0.7.700" />
     <PackageReference Include="TweetinviAPI" Version="2.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="External\Markov\" />
   </ItemGroup>
 </Project>
