--- a/EBot/EBot.csproj
+++ b/EBot/EBot.csproj
@@ -1,14 +1,17 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="External\**" />
+    <EmbeddedResource Remove="External\**" />
+    <None Remove="External\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="3.2.2" />
     <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.0.7.700" />
     <PackageReference Include="TweetinviAPI" Version="2.0.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="External\Markov\" />
   </ItemGroup>
 </Project>
