--- a/EBot/EBot.csproj
+++ b/EBot/EBot.csproj
@@ -10,8 +10,9 @@
     <None Remove="External\**" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="3.2.2" />
-    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.0.7.700" />
-    <PackageReference Include="TweetinviAPI" Version="2.0.0" />
+    <PackageReference Include="DSharpPlus" Version="3.2.3" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.6.3" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.0.7.900" />
+    <PackageReference Include="TweetinviAPI" Version="2.1.0" />
   </ItemGroup>
 </Project>
