--- a/EBot/EBot.csproj
+++ b/EBot/EBot.csproj
@@ -11,8 +11,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="3.2.3" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.6.3" />
-    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.0.7.900" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.6.4" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.1.0" />
+    <PackageReference Include="NLua_Safe" Version="1.3.2.1" />
     <PackageReference Include="TweetinviAPI" Version="2.1.0" />
   </ItemGroup>
 </Project>
