--- a/EBot/EBot.csproj
+++ b/EBot/EBot.csproj
@@ -10,8 +10,8 @@
     <None Remove="External\**" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="3.2.3" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.6.4" />
+    <PackageReference Include="Discord.Net" Version="1.0.2" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.6.5" />
     <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.1.0" />
     <PackageReference Include="NLua_Safe" Version="1.3.2.1" />
     <PackageReference Include="TweetinviAPI" Version="2.1.0" />
