--- a/EBot/EBot.csproj
+++ b/EBot/EBot.csproj
@@ -12,8 +12,8 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="1.0.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.6.5" />
-    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.1.0" />
     <PackageReference Include="NLua_Safe" Version="1.3.2.1" />
-    <PackageReference Include="TweetinviAPI" Version="2.1.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0002" />
+    <PackageReference Include="YoutubeSearch.dll" Version="1.1.0" />
   </ItemGroup>
 </Project>
