--- a/EBot/EBot.csproj
+++ b/EBot/EBot.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.6.5" />
     <PackageReference Include="NLua_Safe" Version="1.3.2.1" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0002" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0002" />
     <PackageReference Include="YoutubeSearch.dll" Version="1.1.0" />
   </ItemGroup>
 </Project>
