--- a/EBot/EBot.csproj
+++ b/EBot/EBot.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="1.0.2" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.6.5" />
+    <PackageReference Include="GoogleCustomSearchEngine" Version="3.0.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.6.6" />
     <PackageReference Include="NLua_Safe" Version="1.3.2.1" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0002" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0002" />
