--- a/EBot/EBot.csproj
+++ b/EBot/EBot.csproj
@@ -10,7 +10,7 @@
     <None Remove="External\**" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="1.0.2" />
+    <PackageReference Include="Discord.Net" Version="2.0.0-beta-00854"/>
     <PackageReference Include="GoogleCustomSearchEngine" Version="3.0.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.6.6" />
     <PackageReference Include="NLua_Safe" Version="1.3.2.1" />
