--- a/EBot/External/config.json
+++ b/EBot/External/config.json
@@ -9,5 +9,6 @@
   "MashapeKey": "",
   "FeedbackChannelID": 0,
   "WebSearchToken": "",
-  "ServerInvite": ""
+  "ServerInvite": "",
+  "SteamAPIKey": ""
 }
