Database and more!
- Added a database service, this opens room for even more possibilities of features and commands

- Added "desc" and "setdesc" to set and see your/other people description

- Added a sql command to check database data when I need to

- Youtube commands now ping the person who ran the command so people dont get confused

--- a/Energize/External/config.json
+++ b/Energize/External/config.json
@@ -10,5 +10,6 @@
   "FeedbackChannelID": 0,
   "WebSearchToken": "",
   "ServerInvite": "",
-  "SteamAPIKey": ""
+  "SteamAPIKey": "",
+  "DBConnectionString": ""
 }
