--- a/Energize/Energize.csproj
+++ b/Energize/Energize.csproj
@@ -19,15 +19,17 @@
     <PackageReference Include="Discord.Net" Version="2.0.0-beta-00879" />
     <PackageReference Include="Google.Apis" Version="1.32.1" />
     <PackageReference Include="GoogleCustomSearchEngine" Version="3.0.1" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.6.15" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.6.16" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.6.1" />
-    <PackageReference Include="MySql.Data" Version="6.10.6" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="6.10.6" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore.Design" Version="6.10.6" />
-    <PackageReference Include="MySql.Web" Version="6.10.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.5" />
     <PackageReference Include="NLua_Safe" Version="1.3.2.1" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0002" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0002" />
     <PackageReference Include="YoutubeSearch.dll" Version="1.1.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
 </Project>
