More work on Flamerize
Proper naming of filesm types, and modules, add MessageSender

--- a/Flamerize/Flamerize.fsproj
+++ b/Flamerize/Flamerize.fsproj
@@ -6,9 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="MessageSender.fs" />
     <Compile Include="Utils.fs" />
-    <Compile Include="BotCommands.fs" />
-    <Compile Include="BotCore.fs" />
+    <Compile Include="Commands.fs" />
+    <Compile Include="Initializer.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
