--- a/Energize.Commands/Energize.Commands.fsproj
+++ b/Energize.Commands/Energize.Commands.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="ImageUrlProvider.fs" />
     <Compile Include="Cache.fs" />
     <Compile Include="Context.fs" />
+    <Compile Include="UserProvider.fs" />
     <Compile Include="Handler.fs" />
   </ItemGroup>
   
