--- a/Energize.ServiceInterfaces/Energize.Interfaces.csproj
+++ b/Energize.ServiceInterfaces/Energize.Interfaces.csproj
@@ -1,7 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="2.0.0-beta-00921" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Energize.Toolkit\Energize.Toolkit.csproj" />
+  </ItemGroup>
 
 </Project>
