--- a/Energize.ServiceInterfaces/Energize.Interfaces.csproj
+++ b/Energize.ServiceInterfaces/Energize.Interfaces.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="2.0.0-beta-00921" />
+    <PackageReference Include="Discord.Net" Version="2.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Energize.Toolkit\Energize.Toolkit.csproj" />
