--- a/Energize/Energize.csproj
+++ b/Energize/Energize.csproj
@@ -12,21 +12,18 @@
     <NoWarn>1701;1702;0436;1998</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="2.0.0-beta-00921" />
-    <PackageReference Include="Google.Apis" Version="1.32.1" />
-    <PackageReference Include="GoogleCustomSearchEngine" Version="3.0.1" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.6.16" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.6.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.5" />
+    <PackageReference Include="Discord.Net" Version="2.0.1" />
+    <PackageReference Include="Google.Apis" Version="1.38.0" />
+    <PackageReference Include="GoogleCustomSearchEngine" Version="4.0.4" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.9.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.10.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.2.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
     <PackageReference Include="NLua_Safe" Version="1.3.2.1" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0002" />
-    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0002" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0006" />
     <PackageReference Include="YoutubeSearch.dll" Version="1.1.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="nuget.config">
