Port + other things
-Made webhook service create one webhook if it doesnt exist and not delete created webhooks everytime
- Finished porting fun module
- Added interfaces for database
- Started porting info module
- Added interface for text style service

--- a/Energize.Commands/Energize.Commands.fsproj
+++ b/Energize.Commands/Energize.Commands.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="Context.fs" />
     <Compile Include="UserHelper.fs" />
     <Compile Include="Command.fs" />
+    <Compile Include="Implementation\Info.fs" />
     <Compile Include="Implementation\Fun.fs" />
     <Compile Include="Implementation\Util.fs" />
     <Compile Include="Handler.fs" />
