--- a/Energize/Energize.csproj
+++ b/Energize/Energize.csproj
@@ -71,7 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Energize.Commands\Energize.Commands.fsproj" />
-    <ProjectReference Include="..\Energize.ServiceInterfaces\Energize.Interfaces.csproj" />
+    <ProjectReference Include="..\Energize.Interfaces\Energize.Interfaces.csproj" />
     <ProjectReference Include="..\Energize.Toolkit\Energize.Toolkit.csproj" />
   </ItemGroup>
 </Project>
