--- a/Energize.Commands/Energize.Commands.fsproj
+++ b/Energize.Commands/Energize.Commands.fsproj
@@ -11,10 +11,10 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.1" />
     <PackageReference Include="FSharp.Compiler.Service" Version="27.0.1" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.9.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.9.1" />
     <PackageReference Include="YoutubeSearch.dll" Version="1.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.0-preview.19074.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.0.0-preview.19074.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.0-preview3.19153.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.0.0-preview3.19153.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="2.0.0-preview1-final" />
   </ItemGroup>
   
@@ -25,7 +25,6 @@
     <Compile Include="Context.fs" />
     <Compile Include="UserHelper.fs" />
     <Compile Include="Command.fs" />
-    <Compile Include="Implementation\Audio.fs" />
     <Compile Include="Implementation\Deprecated.fs" />
     <Compile Include="Implementation\Image.fs" />
     <Compile Include="Implementation\Administration.fs" />
