--- a/Energize/Energize.csproj
+++ b/Energize/Energize.csproj
@@ -37,6 +37,9 @@
     <None Remove="Masks\**" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="External\blacklist.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="External\config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
