--- a/Energize.Interfaces/Energize.Interfaces.csproj
+++ b/Energize.Interfaces/Energize.Interfaces.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.1" />
+    <PackageReference Include="Victoria" Version="4.0.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Energize.Toolkit\Energize.Toolkit.csproj" />
