--- a/Energize.Commands/Energize.Commands.fsproj
+++ b/Energize.Commands/Energize.Commands.fsproj
@@ -7,7 +7,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <NoWarn>NU1603;NU1701;</NoWarn>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.1" />
     <PackageReference Include="FSharp.Compiler.Service" Version="27.0.1" />
@@ -16,7 +16,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.0.0-preview3.19153.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="2.0.0-preview1-final" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <Compile Include="AsyncHelper.fs" />
     <Compile Include="ImageUrlProvider.fs" />
@@ -37,12 +37,12 @@
     <Compile Include="Implementation\Util.fs" />
     <Compile Include="Handler.fs" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <ProjectReference Include="..\Energize.Interfaces\Energize.Interfaces.csproj" />
-    <ProjectReference Include="..\Energize.Toolkit\Energize.Toolkit.csproj" />
+    <ProjectReference Include="..\Energize.Essentials\Energize.Essentials.csproj" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="4.6.2" />
   </ItemGroup>
