--- a/Energize.Interfaces/Energize.Interfaces.csproj
+++ b/Energize.Interfaces/Energize.Interfaces.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="Victoria" Version="4.0.4" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Energize.Toolkit\Energize.Toolkit.csproj" />
+    <ProjectReference Include="..\Energize.Essentials\Energize.Essentials.csproj" />
   </ItemGroup>
 
 </Project>
