--- a/Energize/Energize.csproj
+++ b/Energize/Energize.csproj
@@ -70,6 +70,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Energize.Commands\Energize.Commands.fsproj" />
     <ProjectReference Include="..\Energize.Interfaces\Energize.Interfaces.csproj" />
-    <ProjectReference Include="..\Energize.Toolkit\Energize.Toolkit.csproj" />
+    <ProjectReference Include="..\Energize.Essentials\Energize.Essentials.csproj" />
   </ItemGroup>
 </Project>
