--- a/Energize/Energize.csproj
+++ b/Energize/Energize.csproj
@@ -12,6 +12,14 @@
     <NoWarn>NU1701;1702;0436;1998;NU1603;</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Data\Markov\**" />
+    <Compile Remove="Lua\LuaSavedScripts\**" />
+    <EmbeddedResource Remove="Data\Markov\**" />
+    <EmbeddedResource Remove="Lua\LuaSavedScripts\**" />
+    <None Remove="Data\Markov\**" />
+    <None Remove="Lua\LuaSavedScripts\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.0.0-beta4-final" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.0-preview3.19153.1" />
@@ -41,19 +49,19 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Settings\blacklist.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Settings\config.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Data\static.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Energize.Commands\Energize.Commands.fsproj" />
     <ProjectReference Include="..\Energize.Interfaces\Energize.Interfaces.csproj" />
     <ProjectReference Include="..\Energize.Essentials\Energize.Essentials.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Data\static.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Settings\blacklist.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Settings\config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
