--- a/Energize/Settings/config.json.example
+++ b/Energize/Settings/config.json.example
@@ -4,9 +4,13 @@
     "TokenMain": "discord production token",
     "BotIDMain": "0000000000000000",
     "BotIDDev": "0000000000000000",
+    "PrefixDev": "xx",
+    "PrefixProd": "x",
+    "Separator": ",",
     "ServerInvite": "https://discord.gg/asdfgh",
     "OwnerID": "0000000000000000",
-    "FeedbackChannelID": "0000000000000000"
+    "FeedbackChannelID": "0000000000000000",
+    "BotListToken": "0000000000000000"
   },
   "Lavalink": {
     "Host": "google.com",
