--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,4 @@ logs\.txt
 Energize.Webhooks/__pycache__
 Energize.Webhooks/.vscode
 Energize.Webhooks/config.json
+Energize/Properties/launchSettings\.json
