Add twitch search and playing capability

--- a/Energize/Settings/config.yaml.example
+++ b/Energize/Settings/config.yaml.example
@@ -20,6 +20,7 @@ Keys:
   MashapeKey: mashape api token
   WebSearchToken: websearch api token
   SteamAPIKey: steam api token
+  TwitchKey: twitch api token
 URIs:
   MarkovDirectory: Energize/Data/Markov/
   LuaDirectory: Energize/Lua/
