--- a/Energize.Commands/Energize.Commands.fsproj
+++ b/Energize.Commands/Energize.Commands.fsproj
@@ -24,16 +24,13 @@
     <Compile Include="Context.fs" />
     <Compile Include="UserHelper.fs" />
     <Compile Include="Command.fs" />
-    <Compile Include="Implementation\Voice.fs" />
-    <Compile Include="Implementation\Deprecated.fs" />
-    <Compile Include="Implementation\Image.fs" />
+    <Compile Include="Implementation\Music.fs" />
     <Compile Include="Implementation\Administration.fs" />
     <Compile Include="Implementation\Nsfw.fs" />
-    <Compile Include="Implementation\Game.fs" />
     <Compile Include="Implementation\Social.fs" />
     <Compile Include="Implementation\Search.fs" />
     <Compile Include="Implementation\Info.fs" />
-    <Compile Include="Implementation\Fun.fs" />
+    <Compile Include="Implementation\Generation.fs" />
     <Compile Include="Implementation\Util.fs" />
     <Compile Include="Handler.fs" />
   </ItemGroup>
