--- a/Energize/Energize.csproj
+++ b/Energize/Energize.csproj
@@ -53,6 +53,7 @@
     <ProjectReference Include="..\Energize.Commands\Energize.Commands.fsproj" />
     <ProjectReference Include="..\Energize.Interfaces\Energize.Interfaces.csproj" />
     <ProjectReference Include="..\Energize.Essentials\Energize.Essentials.csproj" />
+    <ProjectReference Include="..\Energize.Markov\Energize.Markov.fsproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Data\static.json">
