--- a/Energize.Web/ClientApp/package.json
+++ b/Energize.Web/ClientApp/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
@@ -14,7 +15,7 @@
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --history-api-fallback",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
