--- a/Energize/Energize.csproj
+++ b/Energize/Energize.csproj
@@ -48,4 +48,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\Transmission\TransmissionModels\" />
+  </ItemGroup>
 </Project>
