Generate documentation automatically

--- a/Energize/Energize.csproj
+++ b/Energize/Energize.csproj
@@ -36,6 +36,10 @@
     <Reference Include="Octovisor.Client">
       <HintPath>..\Octovisor.Client.dll</HintPath>
     </Reference>
+    <Reference Include="Octovisor.Messages">
+      <HintPath>..\Octovisor.Messages.ddl</HintPath>
+    </Reference>
+    <Reference Include="Octovisor.Messages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Data\static.json">
