more work on website, made website responsive ish

--- a/Energize.Web/ClientApp/public/manifest.json
+++ b/Energize.Web/ClientApp/public/manifest.json
@@ -2,7 +2,7 @@
     "short_name": "Energize.Web",
     "name": "Energize.Web",
     "icons": [{
-        "src": "favicon.ico",
+        "src": "img/logo.png",
         "sizes": "64x64 32x32 24x24 16x16",
         "type": "image/x-icon"
     }],
