--- a/Energize.Web/ClientApp/public/manifest.json
+++ b/Energize.Web/ClientApp/public/manifest.json
@@ -1,13 +1,15 @@
-{
-    "short_name": "Energize.Web",
-    "name": "Energize.Web",
-    "icons": [{
-        "src": "img/logo.png",
-        "sizes": "64x64 32x32 24x24 16x16",
-        "type": "image/x-icon"
-    }],
-    "start_url": "./index.html",
-    "display": "standalone",
-    "theme_color": "#000000",
-    "background_color": "#ffffff"
+﻿{
+  "short_name": "Energize⚡",
+  "name": "Energize⚡",
+  "icons": [
+    {
+      "src": "img/logo.png",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    }
+  ],
+  "start_url": "./index.html",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
