--- a/Energize/Energize.csproj
+++ b/Energize/Energize.csproj
@@ -12,13 +12,14 @@
     <NoWarn>NU1701;1702;0436;1998;NU1603;</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="2.1.0" />
+    <PackageReference Include="Discord.Net" Version="2.1.1" />
     <PackageReference Include="DiscordBotsList.Api" Version="1.3.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.2.0-beta1-final" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.0-preview5.19227.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.0.0-preview5.19227.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="2.0.0-preview1-final" />
     <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
+    <PackageReference Include="SpotifyAPI-NET" Version="2.19.0" />
     <PackageReference Include="Victoria" Version="4.0.11" />
   </ItemGroup>
   <ItemGroup>
