--- a/Energize.Essentials/Energize.Essentials.csproj
+++ b/Energize.Essentials/Energize.Essentials.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Discord.Net" Version="2.1.1" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0006" />
+    <PackageReference Include="SpotifyAPI-NET" Version="2.19.0" />
     <PackageReference Include="Victoria" Version="4.0.11" />
     <PackageReference Include="YamlDotNet" Version="6.1.1" />
   </ItemGroup>
