--- a/Settings/config.yaml.example
+++ b/Settings/config.yaml.example
@@ -1,9 +1,9 @@
 ---
 Discord:
   TokenDev: discord dev token
-  TokenMain: discord production token
-  BotIDMain: '0000000000000000'
+  TokenProd: discord production token
   BotIDDev: '0000000000000000'
+  BotIDProd: '0000000000000000'
   PrefixDev: xx
   PrefixProd: x
   Separator: ","
