--- a/Energize.Essentials/Energize.Essentials.csproj
+++ b/Energize.Essentials/Energize.Essentials.csproj
@@ -8,8 +8,10 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0006" />
     <PackageReference Include="SpotifyAPI-NET" Version="2.19.0" />
-    <PackageReference Include="Victoria" Version="4.0.11" />
     <PackageReference Include="YamlDotNet" Version="6.1.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Energize.Victoria\Energize.Victoria.csproj" />
   </ItemGroup>
 
 </Project>
