--- a/Energize.Victoria/Energize.Victoria.csproj
+++ b/Energize.Victoria/Energize.Victoria.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>8.0</LangVersion>
         <TargetFramework>netcoreapp3.0</TargetFramework>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
